--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "author": "Maythee Anegboonlap <null@llun.me>",
   "license": "ISC",
+  "scripts": {
+    "lint": "flow check"
+  },
   "peerDependencies": {
-    "aws-sdk": "^2.54.0"
+    "aws-sdk": "^2.167.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.167.0",
     "bluebird": "^3.5.1",
     "pyconf": "^1.1.2"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.61.0"
   },
   "keywords": [
     "greenlock",
